--- a/kapotopia/android/build.gradle
+++ b/kapotopia/android/build.gradle
@@ -18,10 +18,10 @@ android {
     }
     defaultConfig {
         applicationId "gdx.kapotopia"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "Alpha-0.1"
     }
     buildTypes {
         release {
