--- a/kapotopia/core/build.gradle
+++ b/kapotopia/core/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: "java"
 
 sourceCompatibility = 1.6
+dependencies {
+    implementation 'org.jetbrains:annotations-java5:15.0'
+}
+
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
