Improved gameplay G1 #23 - Gradle v3.4.2 -> v3.3.2
- The player can now choose the game difficulty before play it. A difficulty screen has therefore been added.
- Gradle version changed from v3.4.2 to v3.3.2 due to incompatibility with certain devs devices (thanks gradle).

--- a/kapotopia/build.gradle
+++ b/kapotopia/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.5'
         
 
@@ -33,7 +33,7 @@ allprojects {
 
     repositories {
         mavenLocal()
-        mavenCentral()
+        jcenter()
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
