Minor Fixes to #33
Fixed Encoding errors, minor changes to README and fix in the localization file

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -1,11 +1,11 @@
 game3_instr=Rotate the different parts of this \n labyrinth to the safe practice to advance!
 game3_win=Congrats!!
 game3_loose=Better luck next time...
-text_world1=World 1
-text_world2=World 2
-text_world3=World 3
-text_world4=World 4
-intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivant
+text_world1=Monde 1
+text_world2=Monde 2
+text_world3=Monde 3
+text_world4=Monde 4
+intro_text=Bien jouÃ© ! Mais vous avez oubliÃ© d'attraper les ists suivant
 next_button=Next
 easy_button=Facile
 medium_button=Moyen
@@ -14,7 +14,7 @@ infinite_button=Infini
 success=Bravo !
 fail=GAME OVER
 pause_label_text=Pause
-missed_label_text=Loupé
+missed_label_text=LoupÃ©
 play_button=Play
 back_menu_button=Back to Menu
 game1_button=Game 1
@@ -32,7 +32,7 @@ q0_choix1=blanc
 q0_choix2=rouge
 q0_choix3=vert
 q0_choix4=bleu
-q0_question=De quel couleur est le cheval blanc de napoléon?
+q0_question=De quel couleur est le cheval blanc de napolÃ©on?
 q1_choix1=bleu
 q1_choix2=jaune
 q1_choix3=vert
