Animations and tune up for CinematicsScreen and mockupG1
- Animations:
  - Added a builder to create animations more easily
  - Added two animations as classes free to use
  - Added a lets go animation before Game1 plays
- CinematicsScreen
  - Refractored some of the code, changed the available parameters
  - MockupG1 have been cleaned as such. The texts are now placed in a clear view, the text is stocked in a text file monitored by the Localization class
- Game 1
  - Added a quit button accessible from the pause menu
  - As already said, added an animation fo a text before let the game begins

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -41,4 +41,9 @@ q1_question=Mireille color ?
 time_left=Time left : 
 your_score_is=Your score is : 
 high_score_lab_head=New 
-
+dialogG1_1=Seigneur ! Il fait aussi chaud et sec que dans un vagin non lubrifié ici !
+dialogG1_2=Bienvenue dans la Jungle Infectieuse de Chilly Beachy c'est là que les jeunes recrues comme toi prouvent de quoi elles sont capables pauv tache. C'est clair ?
+dialogG1_3=C'est parti pour l'échauffement, on va commencer par un petit footing de la muerte dans la jungle infectieuse. Prends garde aux fausses ist qui se baladent dans la jungle !
+dialogG1_4=Ok petite perruche, montre moi de quoi t'es capable.
+dialogG1_rules=REGLES: Déplace Mireille sur les différentes routes tout en évitant les fausses IST. Tu perds une vie lorsque tu ramasses une fausse IST. Au bout de 3 vies perdues, tu recommences l'aventure
+quit_button_text=Quitter
