Quick Fix (of many single things)

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -5,6 +5,7 @@ text_world1=Monde 1
 text_world2=Monde 2
 text_world3=Monde 3
 text_world4=Monde 4
+text_istdex=ISTdex
 intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivant
 next_button=Next
 easy_button=Facile
