Addition of dialogues and rules to game2

--- a/kapotopia/android/assets/strings/stiNames.properties
+++ b/kapotopia/android/assets/strings/stiNames.properties
@@ -3,4 +3,4 @@ c_hepatitis=Hépatite C
 hpv=Papilloma\nvirus
 gonorrhea=Gonorrhée
 chlamydia=Chlamydia
-herpes=Herpès\ngénital
+herpes=Herpès\ngénitale
