--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -48,3 +48,5 @@ dialogG1_3=C'est parti pour l'échauffement, on va commencer par un petit footin
 dialogG1_4=Ok petite perruche, montre moi de quoi t'es capable.
 dialogG1_rules=REGLES: Déplace Mireille sur les différentes routes tout en évitant les fausses IST. Tu perds une vie lorsque tu ramasses une fausse IST. Au bout de 3 vies perdues, tu recommences l'aventure
 quit_button_text=Quitter
+game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
+game2_rules=Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
