Use of wrapp for symptoms in game 2

--- a/kapotopia/android/assets/strings/stiSymptoms.properties
+++ b/kapotopia/android/assets/strings/stiSymptoms.properties
@@ -1,6 +1,6 @@
-hiv=fièvre, diarrhée,\néruption cutanée,\ndouleurs musculaires,\napparitions de ganglions,\nfatigue (2 à 4 semaines\naprès contaminations)
-c_hepatitis=fièvre, jaunisse,fatigue\n(2 à 4 semaines après\ncontamination)
-hpv=petites verrues indolores\nsur les organes génitaux\n(1 à 8 semaines après\ncontamination)
-gonorrhea=brulures lorsqu'on urine,\nécoulement jaunâtre/verdâtre\npar le vagin, la verge ou l'anus,\ndouleur au vagin ou à l'extrémité\ndu gland, fièvre (2 à 7 jours\naprès contamination)
-chlamydia=perte vaginale anormale,\nécoulement clair par le vagin,\nl'anus ou le pénis,\nrougeur des muqueuses,\nbrulure lorsqu'on urine\n(quelques jours à quelques mois\naprès contamination, mais\nmajoritairement asymptomatique)
-herpes=cloches sur les organes\ngénitaux ou l'anus,\ndouleur lorsqu'on urine\n(Généralement 2 à 20 jours\naprès contamination,\nparfois quelques années)
+hiv=fièvre, diarrhée, éruption cutanée, douleurs musculaires, apparitions de ganglions, fatigue (2 à 4 semaines après contaminations)
+c_hepatitis=fièvre, jaunisse,fatigue (2 à 4 semaines après contamination)
+hpv=petites verrues indolores sur les organes génitaux (1 à 8 semaines après contamination)
+gonorrhea=brulures lorsqu'on urine, écoulement jaunâtre/verdâtre par le vagin, la verge ou l'anus, douleur au vagin ou à l'extrémité du gland, fièvre (2 à 7 jours après contamination)
+chlamydia=perte vaginale anormale, écoulement clair par le vagin, l'anus ou le pénis, rougeur des muqueuses, brulure lorsqu'on urine (quelques jours à quelques mois après contamination, mais majoritairement asymptomatique)
+herpes=cloches sur les organes génitaux ou l'anus, douleur lorsqu'on urine (Généralement 2 à 20 jours après contamination, parfois quelques années)
