Making live count visible in game 2

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -29,6 +29,7 @@ choice4_button=Choix4
 question_button=Question
 score2_label=Score : 
 timer_label=Timer : 
+lives_label=Vies : 
 q0_choix1=blanc
 q0_choix2=rouge
 q0_choix3=vert
