Orgaization of strings in properties and fix of spelling

--- a/kapotopia/android/assets/strings/stiSymptoms.properties
+++ b/kapotopia/android/assets/strings/stiSymptoms.properties
@@ -1,4 +1,4 @@
-hiv=fièvre, diarrhée, éruption cutanée, douleurs musculaires, apparitions de ganglions, fatigue (2 à 4 semaines après contaminations)
+hiv=fièvre, diarrhée, éruption cutanée, douleurs musculaires, apparitions de ganglions, fatigue (2 à 4 semaines après contamination)
 c_hepatitis=fièvre, jaunisse,fatigue (2 à 4 semaines après contamination)
 hpv=petites verrues indolores sur les organes génitaux (1 à 8 semaines après contamination)
 gonorrhea=brulures lorsqu'on urine, écoulement jaunâtre/verdâtre par le vagin, la verge ou l'anus, douleur au vagin ou à l'extrémité du gland, fièvre (2 à 7 jours après contamination)
