--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -1,27 +1,28 @@
-game3_instr=Rotate the different parts of this \n labyrinth to the safe practice to advance!
-game3_win=Congrats!!
-game3_loose=Better luck next time...
 text_world1=Monde 1
 text_world2=Monde 2
 text_world3=Monde 3
 text_world4=Monde 4
+game1_button=Game 1
+game2_button=Game 2
 text_istdex=ISTdex
-intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivant
-next_button=Next
+
 easy_button=Facile
 medium_button=Moyen
 hard_button=Difficile
 infinite_button=Infini
+
+play_button=Play
+back_button=Back
+back_menu_button=Back to Menu
+next_button=Next
+quit_button_text=Quitter
+
 success=Bravo !
 fail=GAME OVER
 pause_label_text=Pause
 missed_label_text=Loupé
-play_button=Play
-back_menu_button=Back to Menu
-game1_button=Game 1
-game2_button=Game 2
 soon_label=En construction, revenez plus tard !
-back_button=Back
+
 choice1_button=Choix1
 choice2_button=Choix2
 choice3_button=Choix3
@@ -30,6 +31,24 @@ question_button=Question
 score2_label=Score : 
 timer_label=Timer : 
 lives_label=Vies : 
+time_left=Time left : 
+your_score_is=Your score is : 
+high_score_lab_head=New 
+
+dialogG1_1=Seigneur ! Il fait aussi chaud et sec que dans un vagin non lubrifié ici !
+dialogG1_2=Bienvenue dans la Jungle Infectieuse de Chilly Beachy c'est là que les jeunes recrues comme toi prouvent de quoi elles sont capables pauv tache. C'est clair ?
+dialogG1_3=C'est parti pour l'échauffement, on va commencer par un petit footing de la muerte dans la jungle infectieuse. Prends garde aux fausses ist qui se baladent dans la jungle !
+dialogG1_4=Ok petite perruche, montre moi de quoi t'es capable.
+dialogG1_rules=REGLES: Déplace Mireille sur les différentes routes tout en évitant les fausses IST. Tu perds une vie lorsque tu ramasses une fausse IST. Au bout de 3 vies perdues, tu recommences l'aventure
+intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivantes
+
+game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
+game2_rules=Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
+
+game3_instr=Rotate the different parts of this \n labyrinth to the safe practice to advance!
+game3_win=Congrats!!
+game3_loose=Better luck next time...
+
 q0_choix1=blanc
 q0_choix2=rouge
 q0_choix3=vert
@@ -40,14 +59,3 @@ q1_choix2=jaune
 q1_choix3=vert
 q1_choix4=blanc
 q1_question=Mireille color ?
-time_left=Time left : 
-your_score_is=Your score is : 
-high_score_lab_head=New 
-dialogG1_1=Seigneur ! Il fait aussi chaud et sec que dans un vagin non lubrifié ici !
-dialogG1_2=Bienvenue dans la Jungle Infectieuse de Chilly Beachy c'est là que les jeunes recrues comme toi prouvent de quoi elles sont capables pauv tache. C'est clair ?
-dialogG1_3=C'est parti pour l'échauffement, on va commencer par un petit footing de la muerte dans la jungle infectieuse. Prends garde aux fausses ist qui se baladent dans la jungle !
-dialogG1_4=Ok petite perruche, montre moi de quoi t'es capable.
-dialogG1_rules=REGLES: Déplace Mireille sur les différentes routes tout en évitant les fausses IST. Tu perds une vie lorsque tu ramasses une fausse IST. Au bout de 3 vies perdues, tu recommences l'aventure
-quit_button_text=Quitter
-game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
-game2_rules=Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
