Better names in menus + better buttons position

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -1,9 +1,9 @@
-text_world1=Monde 1
-text_world2=Monde 2
+text_world1=Chilly Beachy
+text_world2=Risky Club
 text_world3=Monde 3
 text_world4=Monde 4
-game1_button=Game 1
-game2_button=Game 2
+game1_button=Jungle Infectueuse
+game2_button=Basket Beach
 text_istdex=ISTdex
 
 easy_button=Facile
