--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -45,7 +45,7 @@ intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivantes
 game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
 game2_rules=Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
 
-game3_instr=Rotate the different parts of this \n labyrinth to the safe practice to advance!
+game3_instr=Fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\n Chaque serrure est associée à une pratique, tapes-dessus pour l'afficher,\net évites les pratiques à risque!
 game3_win=Congrats!!
 game3_loose=Better luck next time...
 
