--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -13,8 +13,8 @@ infinite_button=Infini
 
 play_button=Play
 back_button=Back
-back_menu_button=Back to Menu
-next_button=Next
+back_menu_button=Retour au menu
+next_button=Suivant
 quit_button_text=Quitter
 
 success=Bravo !
@@ -35,19 +35,24 @@ time_left=Time left :
 your_score_is=Your score is : 
 high_score_lab_head=New 
 
-dialogG1_1=Seigneur ! Il fait aussi chaud et sec que dans un vagin non lubrifié ici !
-dialogG1_2=Bienvenue dans la Jungle Infectieuse de Chilly Beachy c'est là que les jeunes recrues comme toi prouvent de quoi elles sont capables pauv tache. C'est clair ?
-dialogG1_3=C'est parti pour l'échauffement, on va commencer par un petit footing de la muerte dans la jungle infectieuse. Prends garde aux fausses ist qui se baladent dans la jungle !
-dialogG1_4=Ok petite perruche, montre moi de quoi t'es capable.
-dialogG1_rules=REGLES: Déplace Mireille sur les différentes routes tout en évitant les fausses IST. Tu perds une vie lorsque tu ramasses une fausse IST. Au bout de 3 vies perdues, tu recommences l'aventure
-intro_text=Bien joué ! Mais vous avez oublié d'attraper les ists suivantes
+dialogG1_1=Bonjour toi, je t'attendais! Je suis mireille, ta ca-pote. 
+dialogG1_15=Si tu es ici, c'est que comme moi, tu as des examens à passer. \nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir! 
+dialogG1_2=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST!
+dialogG1_3=Ne tournons pas autour du pot, c'est parti pour l'échauffement: un petit footing dans la jungle infectieuse. \nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper!
+dialogG1_4=Okay les raclures de bidets, montrez-moi ce que vous avez dans le ventre ! 
+dialogG1_rules=REGLES: Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à attraper ces dernières, tu perdras donc une vie si tu les ramasses. \nAu bout de 3 vies perdues, tu recommences l'aventure.
+intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suivantes :
 
+game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci! 
 game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
-game2_rules=Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
+game2_rules=Le but de cette épreuve et d'apprendre les symptômes de chaque IST. Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
 
-game3_instr=Fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\n Chaque serrure est associée à une pratique, tapes-dessus pour l'afficher,\net évites les pratiques à risque!
-game3_win=Congrats!!
-game3_loose=Better luck next time...
+game3_diag1=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
+game3_diag2=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
+game3_diag2=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
+game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher.  \nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
+game3_win=Félicitation, tu as réussis à t'enfuir!
+game3_loose=Tu es maintenant une capote percée et donc inutile...
 
 q0_choix1=blanc
 q0_choix2=rouge
