--- a/kapotopia/android/assets/strings/practices.properties
+++ b/kapotopia/android/assets/strings/practices.properties
@@ -20,3 +20,4 @@ unsafe9=Un échange \nde godemichet
 unsafe10=Un doigt \ndans l'anus
 unsafe11=Un doigt \ndans le vagin
 unsafe12=Une éjaculation \nsur les organes \ngénitaux
+unsafe13=La position 69
