--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -35,6 +35,10 @@ time_left=Time left :
 your_score_is=Your score is : 
 high_score_lab_head=New 
 
+dialogIntro1=Bienvenue à Kapotopia !
+dialogIntro2=Ici, tu apprendras des informations importantes sur la sexualité et ses risques afin de mieux t'en protéger. Cela marche comme suit :
+dialogIntro3=Le premier monde contient deux épreuves pour tester tes connaissances à propos des IST : leur noms et leurs symptômes. \nLe deuxième monde t'apprendra les pratiques sexuelles à risques ou non. \nL'IST-dex, quant à lui, est simplement une encylopédie pour tout apprendre sur nos ennemis les IST.
+
 dialogG1_1=Bonjour toi, je t'attendais! Je suis mireille, ta ca-pote. 
 dialogG1_15=Si tu es ici, c'est que comme moi, tu as des examens à passer. \nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir! 
 dialogG1_2=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST!
@@ -51,8 +55,9 @@ game3_diag1=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que j
 game3_diag2=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
 game3_diag2=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
 game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher.  \nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
-game3_win=Félicitation, tu as réussis à t'enfuir!
-game3_loose=Tu es maintenant une capote percée et donc inutile...
+game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
+game3_loose=Malheureusement tu n'as pas réussis à t'enfuir...
+
 
 q0_choix1=blanc
 q0_choix2=rouge
