Small changes in symptoms strings to avoid ciscentrism

--- a/kapotopia/android/assets/strings/stiSymptoms.properties
+++ b/kapotopia/android/assets/strings/stiSymptoms.properties
@@ -1,10 +1,10 @@
-hiv=Souvent asymptotique. Dans les autres cas, éruptions cutanées et/ou symptômes ressemblant à ceux de la grippe (fièvre, fatigue, ganglions gonflés, etc.) dans les premières semaines. 
+hiv=Souvent asymptotique. Dans les autres cas, éruptions cutanées et/ou symptômes ressemblant à ceux de la grippe (fièvre, fatigue, ganglions gonflés, etc.) dans les premières semaines
 c_hepatitis=Fièvre, jaunisse, nausée, douleurs musculaires, fatigue (2 à 4 semaines après contamination)
-hpv=Souvent asymptotique. Dans les autres cas, lésions précancéreuses très souvent indolores et/ou irritations et démangeaisons dues à l'apparition de verrues (appelées condylomes)
-gonorrhea=Ecoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant ou encore douleur à la gorge et à l’anus.
-chlamydia=Souvent asymptotique. Dans les autres cas, douleurs en urinant, au bas-ventre/à la gorge/à l’anus, écoulement inhabituel des parties génitales et saignements irréguliers.
-herpes=Cloches sur les organes génitaux ou l'anus, douleur en urinant(Généralement 2 à 20 jours après contamination, parfois quelques années). Très douloureux lors de la primo-infection.
+hpv=Souvent asymptotique. Dans les autres cas, lésions précancéreuses très souvent indolores et/ou irritations, démangeaisons dues à l'apparition de verrues (appelées condylomes)
+gonorrhea=Ecoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant, douleur à la gorge et à l'anus.
+chlamydia=Souvent asymptotique. Dans les autres cas, douleurs en urinant, au bas-ventre/à la gorge/à l'anus, écoulement inhabituel des parties génitales, saignements irréguliers.
+herpes=Cloches sur les organes génitaux ou l'anus, douleur en urinant (Généralement 2 à 20 jours après contamination, parfois quelques années). Très douloureux lors de la primo-infection.
 syphillis=Chancre (ulcère ou plaie creuse) buccal, génital ou anal au stade précoce (peut passer inaperçu) et éruption cutanée.
 trichomonas=Pertes vaginales odorantes et colorées, démangeaisons, sensation de brûlure en urinant. Symptômes fréquents au niveau vaginal (80% des cas) mais asymptotique dans 90% des cas au niveau du pénis.
-chancreMou=Ulcération de la peau avec l’apparition de lésions multiples. Gonflement des ganglions lymphatiques. Généralement beaucoup plus douloureux chez l'homme que chez la femme.
-mycoplasmaGenitalium=Souvent asymptomatique. Pertes vaginales, des saignements intermenstruels ou post-coïtaux pour la femme, douleurs en urinant, écoulement, infection de l'urêtre pour l'homme.
+chancreMou=Ulcération de la peau avec l'apparition de lésions multiples. Gonflement des ganglions lymphatiques. Généralement beaucoup plus douloureux pour un pénis que pour une vulve.
+mycoplasmaGenitalium=Souvent asymptomatique. Pertes vaginales, saignements intermenstruels ou post-coïtaux pour une vulve. Douleurs en urinant, écoulement, infection de l'urêtre pour un pénis.
