--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -50,10 +50,19 @@ intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suiva
 game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci! 
 game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
 game2_rules=Le but de cette épreuve et d'apprendre les symptômes de chaque IST. Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
+game2_badending1=Pas mal!
+game2_badending2=Tu as les bons symptômes pour 
+game2_badending3= IST.
+game2_badending4=Tu y es presque!
+game2_badending5=Bien essayé!
+game2_badending6=Persévère! Tu peux y arriver.
+game2_goodending1=Félicitation!
+game2_goodending2=Tu as associé tous les bons
+game2_goodending3=symptômes aux bonnes IST!
 
 game3_diag1=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
 game3_diag2=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
-game3_diag2=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
+game3_diag3=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
 game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher.  \nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
 game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
 game3_loose=Malheureusement tu n'as pas réussis à t'enfuir...
