--- a/kapotopia/android/assets/strings/practices.properties
+++ b/kapotopia/android/assets/strings/practices.properties
@@ -13,11 +13,12 @@ unsafe2=Une pénétration \nanale
 unsafe3=Un frotti-frotta \nd'organes génitaux
 unsafe4=Un échange \nde seringue
 unsafe5=Une fellation
-unsafe6=Une caresse \nsexuelle
+unsafe6=Une caresse \nsexuelle  
 unsafe7=Un cunnilingus
 unsafe8=Un anulingus
 unsafe9=Un échange \nde godemichet
-unsafe10=Un doigt \ndans l'anus
+unsafe10=Ejaculation \nfaciale
 unsafe11=Un doigt \ndans le vagin
 unsafe12=Une éjaculation \nsur les organes \ngénitaux
 unsafe13=La position 69
+
