--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -39,15 +39,18 @@ dialogIntro1=Bienvenue à Kapotopia !
 dialogIntro2=Ici, tu apprendras des informations importantes sur la sexualité et ses risques afin de mieux t'en protéger. Cela marche comme suit :
 dialogIntro3=Le premier monde contient deux épreuves pour tester tes connaissances à propos des IST : leur noms et leurs symptômes. \nLe deuxième monde t'apprendra les pratiques sexuelles à risques ou non. \nL'IST-dex, quant à lui, est simplement une encylopédie pour tout apprendre sur nos ennemis les IST.
 
-dialogG1_1=Bonjour toi, je t'attendais! Je suis mireille, ta ca-pote. 
-dialogG1_15=Si tu es ici, c'est que comme moi, tu as des examens à passer. \nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir! 
-dialogG1_2=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST!
-dialogG1_3=Ne tournons pas autour du pot, c'est parti pour l'échauffement: un petit footing dans la jungle infectieuse. \nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper!
-dialogG1_4=Okay les raclures de bidets, montrez-moi ce que vous avez dans le ventre ! 
-dialogG1_rules=REGLES: Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à attraper ces dernières, tu perdras donc une vie si tu les ramasses. \nAu bout de 3 vies perdues, tu recommences l'aventure.
+dialogG1_1=Bonjour toi, je t'attendais ! Je suis mireille, ta ca-pote.
+dialogG1_2=Si tu es ici, c'est que comme moi, tu as des examens à passer. \nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir!
+dialogG1_3=Vu que t'es nouveau, j'espère que les épreuves ne seront pas trop dures pour toi. Les instructeurs ont tendance à être un peu brusques...
+dialogG1_4=Oh en parlant du loup, attention le sergent dildo s'approche, on ferait mieux de se taire avant de se faire mettre au trou.
+dialogG1_5=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST !
+dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse. \nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper!
+dialogG1_7=Okay les raclures de fond de bidet, montrez-moi ce que vous avez dans le ventre !
+dialogG1_rules_1=REGLES
+dialogG1_rules_2=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais. \nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
 intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suivantes :
 
-game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci! 
+game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci!
 game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
 game2_rules=Le but de cette épreuve et d'apprendre les symptômes de chaque IST. Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
 game2_badending1=Pas mal!
