--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -46,8 +46,7 @@ dialogG1_4=Oh en parlant du loup, attention le sergent dildo s'approche, on fera
 dialogG1_5=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST !
 dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse. \nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper!
 dialogG1_7=Okay les raclures de fond de bidet, montrez-moi ce que vous avez dans le ventre !
-dialogG1_rules_1=REGLES
-dialogG1_rules_2=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais. \nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
+dialogG1_rules_1=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais. \nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
 intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suivantes :
 
 game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci!
@@ -63,13 +62,16 @@ game2_goodending1=Félicitation!
 game2_goodending2=Tu as associé tous les bons
 game2_goodending3=symptômes aux bonnes IST!
 
-game3_diag1=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
-game3_diag2=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
-game3_diag3=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
-game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher.  \nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
+game3_diag1=Qu'est ce que cette forêt est dense, c'est un véritable labyrinthe.
+game3_diag2=Oh mais serait-ce un bâtiment que j'aperçois là-bas ?
+game3_diag3=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
+game3_diag4=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
+game3_diag5=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
+game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
 game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
-game3_loose=Malheureusement tu n'as pas réussis à t'enfuir...
+game3_loose=Malheureusement tu n'as pas réussi à t'enfuir...
 
+rules_title=REGLES
 
 q0_choix1=blanc
 q0_choix2=rouge
