--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -67,7 +67,7 @@ game3_diag2=Oh mais serait-ce un bâtiment que j'aperçois là-bas ?
 game3_diag3=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
 game3_diag4=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
 game3_diag5=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
-game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la dévérouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Les serrures associées aux pratiques à risque ne fonctionneront pas!
+game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la déverrouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique à risque, ou non, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Tu dois trouver la pratique non à risque, les autres ne fonctionneront pas!
 game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
 game3_loose=Malheureusement tu n'as pas réussi à t'enfuir...
 
