Fixed #76 - skip buttons for game intros
Added skip button to skip intro scenes. They appear once the player played them already once (it is actually turned on when the player go on the actual game screen).
I also reordered some pictures for bubbles and buttons by renaming them, and organizing them into new folders

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -5,7 +5,7 @@ text_world4=World 4
 game1_button=Infectious Jungle
 game2_button=Basket Beach
 text_istdex=ISTdex
-
+# Choosing Difficulty Screen
 easy_button=Easy
 medium_button=Medium
 hard_button=Hard
@@ -16,6 +16,7 @@ back_button=Back
 back_menu_button=Back to menu
 next_button=Next
 quit_button_text=Quit
+skip_button=Skip
 
 success=Bravo !
 fail=GAME OVER
