#47 Done - Cutscenes for Game 2 done

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -37,11 +37,11 @@ highscore=Highscore:
 time_left=Time left : 
 your_score_is=Your score is : 
 high_score_lab_head=New 
-
+# Intro general
 dialogIntro1=Welcome to Kapotopia !
 dialogIntro2=Here, you'll learn important informations on sexuality and its risks in order to better protect yourself.
 dialogIntro3=The first world contains two tests about your knowledge on STI : their names and symptoms.\nThe second world will teach you the safe and unsafe sexual practices.\nAnd finally the STI-dex, it is simply an encyclopedia to learn everything about our ennemies, the STIs.
-
+# Intro Game 1
 dialogG1_1=Hi ! I was waiting for you ! I'm mireille, your condom-pal.
 dialogG1_2=If you're here, it's because like me, you have to redo your exams.\nThis year, the tests are done in pairs. I'm counting on you to help me succeed !
 dialogG1_3=As you're new here, i hope the trials won't be to hard for you. The instructors tend to be a bit blunt...
@@ -50,11 +50,15 @@ dialogG1_5=Greetings, recruits. Welcome to the Infectious Jungle of Chilly Beach
 dialogG1_6=Let's not beat around the bush, let's go for a warm-up: a little jog in the infectious jungle.\nBeware of the ists wandering around in the jungle, don't let any escape!
 dialogG1_7=Okay bidet bottom scrapers, show me what you got!
 dialogG1_rules_1=Your goal here is to quickly identify real STIs and catch them before they hit the ground.\nMove Mireille around on the different roads in order to do that. You'll be rewarded for every STD you catch.\nWarning: not all creatures falling from trees are STIs! You're not empowered to catch them, so you'll lose a life if you do.\nAfter three lives lost, you start the adventure all over again.\n\nAnd if you find the warm-up too easy, you can always try the higher difficulty.
+# Game 1
 intro_text=Well done! Unfortunately, you forgot to catch the following STIs:
-
-game2_diag0=Well, it wasn't easy, but I passed the first test thanks to you. Let's go to the next one, to the beach this time!
-game2_diag1=Hi! I'm Alix. In case you don't recognize me, I'm a dental dam. Now that you're up to your neck in endurance, thanks to Sergeant Dildo, I'm taking you to the beach to play Kapotopia's national sport, basketball! Yes, it also takes a good dose of agility to be a good certified protector...
+game1_outro1=Well, it wasn't easy, but I passed the first test thanks to you. Let's go to the next one, to the beach this time!
+# Intro Game 2
+game2_diag1=Warm sand, sunny sky, seagulls flying around, man-eating sharks, no doubt we are at the beach!
+game2_diag2=Oh look over there! Looks like we're expected!
+game2_diag3=Hi! I'm Alix. In case you don't recognize me, I'm a dental dam. Now that you're up to your neck in endurance, thanks to Sergeant Dildo, I'm taking you to the beach to play Kapotopia's national sport, basketball! Yes, it also takes a good dose of agility to be a good certified protector...
 game2_rules=The purpose of this test is to learn the symptoms of each STI. Throw the ball corresponding to an STI into the basket with the correct symptoms.\nStart by selecting a ball by touching it, then throw it by swipping it up.\nYou can also change the presented symptom by swiping left or right.\nEach mistake will cost you a life. If you run out of life, you will have to restart the game.
+# Game 2
 game2_badending1=Not bad!
 game2_badending2=You got the right symptoms for 
 game2_badending3=STI..
