Addition of cutscene for the start of the game

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -11,6 +11,8 @@ medium_button=Medium
 hard_button=Hard
 infinite_button=Infinite
 
+showfirstcutscene=Watch intro
+
 play_button=Play
 back_button=Back
 back_menu_button=Back to menu
