--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -19,6 +19,8 @@ back_menu_button=Back to menu
 next_button=Next
 quit_button_text=Quit
 skip_button=Skip
+continue_button=Continue
+restart_button=Restart
 
 success=Bravo !
 fail=GAME OVER
