Improvement of end text for game 2

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -63,7 +63,7 @@ game2_rules=The purpose of this test is to learn the symptoms of each STI. Throw
 # Game 2
 game2_badending1=Not bad!
 game2_badending2=You got the right symptoms for 
-game2_badending3=STI..
+game2_badending3=STI...
 game2_badending4=You're so close!
 game2_badending5=Nice try!
 game2_badending6=Persevere! You can do it.
