Correction of typos in english strings

--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -122,14 +122,14 @@ unsafe12=An ejaculation\non the genitals
 unsafe13=The 69 position
 
 # SYMPTOMS
-hiv_symp=Often asymptotic. In other cases, skin rashes and/or flu-like symptoms (fever, fatigue, swollen glands, etc.) in the first few weeks.
+hiv_symp=Often asymptomatic. In other cases, skin rashes and/or flu-like symptoms (fever, fatigue, swollen glands, etc.) in the first few weeks.
 c_hepatitis_symp=Fever, jaundice, nausea, muscle pain, fatigue (2 to 4 weeks after contamination)
-hpv_symp=Often asymptotic. In other cases, precancerous lesions very often painless and/or irritated, itching due to the appearance of warts (called condylomas).
+hpv_symp=Often asymptomatic. In other cases, precancerous lesions very often painless and/or irritated, itching due to the appearance of warts (called condylomas).
 gonorrhea_symp=Unusual discharge (from the penis or vagina), irritation of the penis or vulva, pain in the lower abdomen, burning sensation when urinating, pain in the throat and anus.
-chlamydia_symp=Often asymptotic. In other cases, pain when urinating, pain in the lower abdomen/throat/anus, unusual discharge from the genitals, irregular bleeding.
+chlamydia_symp=Often asymptomatic. In other cases, pain when urinating, pain in the lower abdomen/throat/anus, unusual discharge from the genitals, irregular bleeding.
 herpes_symp=Blisters on the genitals or anus, pain while urinating (Usually 2 to 20 days after contamination, sometimes a few years). Very painful during the primary infection.
 syphillis_symp=Chancre (ulcer or hollow sore) in the mouth, genital or anal area in the early stage (may go unnoticed) and skin rash.
-trichomonas_symp=Odorous and coloured vaginal discharge, itching, burning sensation when urinating. Symptoms are common in the vagina (80% of cases) but asymptotic in 90% of cases in the penis.
+trichomonas_symp=Odorous and coloured vaginal discharge, itching, burning sensation when urinating. Symptoms are common in the vagina (80% of cases) but asymptomatic in 90% of cases in the penis.
 chancreMou_symp=Ulceration of the skin with the appearance of multiple lesions. Swelling of the lymph nodes. Usually much more painful for a penis than for a vulva.
 mycoplasmaGenitalium_symp=Often asymptomatic. Vaginal discharge, inter-menstrual or post-coital bleeding for a vulva. Pain on urination, discharge, urethral infection for a penis.
 
